--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мой первый сайт</title>+
+    <!-- used 3.4 version of bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="row">
-    <div class="col-lg-8 col-lg-offset-2">
-        <div class="box"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-xs-12">
+                <div class="box">
+                    <div class="row">
+                        <div class="col-lg-9">
+                            <div class="box"></div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="box"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-xs-12">
+                <div class="box"></div>
+            </div>
+            <div class="col-lg-4 col-xs-12">
+                <div class="box"></div>
+            </div>
+        </div>
     </div>
 </div>
 </body>
