--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,12 @@
             </div>
         </div>
     </div>
+    <div class="conteiner text-center">
+        <h1>h1. Botstrap heading</h1>
+    </div>
+    <div class="conteiner">
+        <button class="btn-success">Кнопка для примера</button>
+    </div>
 </div>
 </body>
 </html>
